--- a/giglink/style/style.css
+++ b/giglink/style/style.css
@@ -6,8 +6,7 @@
   padding: 0;
   margin: 0;
   border: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 a {
@@ -42,7 +41,7 @@ body {
   line-height: 1;
 }
 
-[class*="__container"] {
+[class*=__container] {
   max-width: 900px;
   margin: 0 auto;
 }
@@ -58,25 +57,18 @@ body {
 
 /* ================ horizontal line ================ */
 body {
-  font-family: 'Manrope', sans-serif;
+  font-family: "Manrope", sans-serif;
 }
 
 .wrapper {
   overflow: hidden;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   min-height: 100%;
 }
 
 .main {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
+  flex: 1 1 auto;
 }
 
 /* ================ Header ================ */
@@ -87,20 +79,12 @@ body {
 }
 
 .header__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .menu_list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -117,12 +101,8 @@ body {
 }
 
 .language {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 /* ================ Main ================ */
@@ -140,19 +120,14 @@ body {
 
 .get-started-1 {
   padding: 25px 25px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
 /* ================ get-started-tags ================ */
 .get-started-tags {
   margin-bottom: 16px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
 }
 
 .marketing_tags {
@@ -193,16 +168,12 @@ body {
 }
 
 .clock-time {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding-left: 17px;
   padding-top: 30px;
 }
 
 .clock-time_process {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding-bottom: 24px;
   padding-top: 30px;
@@ -217,12 +188,8 @@ body {
   margin-top: 38px;
   margin-left: 6px;
   margin-right: 24px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 
 /*  Latest News   */
@@ -235,8 +202,6 @@ body {
 }
 
 .latest-news-content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
@@ -270,4 +235,11 @@ body {
 .market {
   margin-right: 16px;
 }
-/*# sourceMappingURL=style.css.map */
+
+/* ================ Footer ================ */
+footer {
+  width: 100%;
+  height: 389px;
+  margin-top: 45px;
+  background-color: #051ED6;
+}/*# sourceMappingURL=style.css.map */
