--- a/giglink/style/style.scss
+++ b/giglink/style/style.scss
@@ -191,3 +191,15 @@
 }
 
 
+
+
+
+
+/* ================ Footer ================ */
+
+footer {
+    width: 100%;
+    height: 389px;
+    margin-top: 45px;
+    background-color: #051ED6;
+}
