--- a/giglink/style/style.scss
+++ b/giglink/style/style.scss
@@ -209,7 +209,6 @@ footer {
 .row {
     margin-top: 50px;
     display: flex;
-
 }
 
 .footer_menu {
@@ -273,4 +272,13 @@ footer {
 .social__list {
     gap: 15px;
     display: flex;
+}
+
+.copyright * {
+    padding-left: 67px;
+    padding-top: 125px;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    color: #9EAAFF;;
 }
