--- a/giglink/style/style.css
+++ b/giglink/style/style.css
@@ -194,7 +194,7 @@ body {
 
 /*  Latest News   */
 .latest-news__container {
-  height: 984px;
+  height: 1040px;
   margin-top: 32px;
   border-radius: 18px;
   border: 3px solid #EFF0F3;
@@ -202,6 +202,8 @@ body {
 }
 
 .latest-news-content {
+  padding-top: 20px;
+  padding-bottom: 20px;
   display: flex;
 }
 
@@ -229,11 +231,44 @@ body {
 }
 
 .latest-tegs {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   margin-top: 31px;
+}
+
+.time-post p {
+  font-size: 14px;
 }
 
 .market {
   margin-right: 16px;
+}
+
+.latest_images-container a img {
+  padding-left: 30px;
+  margin-right: 25px;
+}
+
+.all__button {
+  text-align: center;
+}
+
+.all__button button {
+  width: 175px;
+  height: 48px;
+  margin-bottom: 20px;
+  border-radius: 100px;
+  background-color: #fff;
+  border: 1.5px solid #051ED6;
+}
+
+.all__button button a {
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 24px;
+  color: #051ED6;
+  text-transform: uppercase;
 }
 
 /* ================ Footer ================ */
