Responsive faylni yaratdim

--- a/giglink/style/style.scss
+++ b/giglink/style/style.scss
@@ -1,7 +1,7 @@
-/* ================ Core ================ */
-
+@import 'responsive';
 @import 'base';
 
+/* ================ Core ================ */
 
 .wrapper {
     overflow: hidden;
