--- a/giglink/style/style.scss
+++ b/giglink/style/style.scss
@@ -67,6 +67,7 @@
 .get-started-1 {
     padding: 25px 25px;
     display: flex;
+    flex-direction: column;
 }
 
 /* ================ get-started-tags ================ */
